src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__mz_timestamp__cast_timestamp_tz_to_mz_timestamp.snap
---
source: src/expr/src/scalar/func/impls/mz_timestamp.rs
expression: "#[sqlfunc(sqlname = \"timestamp_tz_to_mz_timestamp\", is_monotone = true)]\nfn cast_timestamp_tz_to_mz_timestamp(\n    a: CheckedTimestamp<DateTime<Utc>>,\n) -> Result<Timestamp, EvalError> {\n    a.timestamp_millis()\n        .try_into()\n        .map_err(|_| EvalError::MzTimestampOutOfRange(a.to_string().into()))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct CastTimestampTzToMzTimestamp;
impl crate::func::EagerUnaryFunc for CastTimestampTzToMzTimestamp {
    type Input<'a> = CheckedTimestamp<DateTime<Utc>>;
    type Output<'a> = Result<Timestamp, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_timestamp_tz_to_mz_timestamp(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn is_monotone(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastTimestampTzToMzTimestamp {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("timestamp_tz_to_mz_timestamp")
    }
}
fn cast_timestamp_tz_to_mz_timestamp(
    a: CheckedTimestamp<DateTime<Utc>>,
) -> Result<Timestamp, EvalError> {
    a.timestamp_millis()
        .try_into()
        .map_err(|_| EvalError::MzTimestampOutOfRange(a.to_string().into()))
}
