src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__mz_timestamp__step_mz_timestamp.snap
---
source: src/expr/src/scalar/func/impls/mz_timestamp.rs
expression: "#[sqlfunc(\n    sqlname = \"step_mz_timestamp\",\n    preserves_uniqueness = true,\n    is_monotone = true\n)]\nfn step_mz_timestamp(a: Timestamp) -> Result<Timestamp, EvalError> {\n    a.checked_add(1).ok_or(EvalError::MzTimestampStepOverflow)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct StepMzTimestamp;
impl crate::func::EagerUnaryFunc for StepMzTimestamp {
    type Input<'a> = Timestamp;
    type Output<'a> = Result<Timestamp, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        step_mz_timestamp(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for StepMzTimestamp {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("step_mz_timestamp")
    }
}
fn step_mz_timestamp(a: Timestamp) -> Result<Timestamp, EvalError> {
    a.checked_add(1).ok_or(EvalError::MzTimestampStepOverflow)
}
